# ocd

./: .build.yaml  .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REUSE.toml  cliff.toml  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: binary.yaml  ci.yaml  quality.yaml  release.yaml  reuse.yaml
docs/: _config.yaml  index.md  ocd-clone.1  ocd-deploy.1  ocd-init.1  ocd-ls.1  ocd-rm.1  ocd-undeploy.1  ocd.1  usage.md
docs/_layouts/: default.html  post.html
docs/_posts/: 2025-04-20-devlog-000.md  2025-04-21-ocd-devlog-001.md  2025-04-22-ocd-devlog-002.md  2025-04-25-ocd-devlog-003.md  2025-05-02-ocd-devlog-004.md  2025-05-02-ocd-devlog-005.md
src/: cluster.rs  cmd.rs  command.rs  config.rs  fs.rs  lib.rs  main.rs  model.rs  path.rs  repo.rs  store.rs  tests.rs  utils.rs  vcs.rs
src/config/: cluster.rs
src/model/: cluster.rs  hook.rs
src/repo/: auth.rs
src/tests/: cluster.rs  model.rs  store.rs  utils.rs  vcs.rs
src/tests/fixture/node_deploy/: already_deployed.txtar  not_deployed.txtar
src/tests/fixture/node_new_open/: fixtures.txtar
src/tests/fixture/root_new_clone/: deploy_config_dir.txtar
src/tests/fixture/root_new_open/: deploy_config_dir.txtar  deploy_custom_dir_alias.txtar  deploy_default_dir_alias.txtar  deploy_home_dir.txtar  undeploy_config_dir.txtar  undeploy_custom_dir_alias.txtar  undeploy_default_dir_alias.txtar  undeploy_home_dir.txtar
src/tests/fixture/root_nuke/: root.txtar
tests/: main.rs
tests/fixtures/cluster_dependency_iter/: no_dependencies.txtar
tests/fixtures/cluster_new_acyclic_check/: depend_self.txtar  full_cycle.txtar  no_dependencies.txtar
tests/fixtures/cluster_new_dependency_existence_check/: undefined_dependencies.txtar
tests/fixtures/cluster_new_expand_work_dir_aliases/: full_expansion.txtar
tests/fixtures/cluster_new_invalid_setup/: no_root.txtar
tests/fixtures/cluster_new_valid_setup/: root_only.txtar
tests/fixtures/root_new_open/: deploy_config_dir.txtar  deploy_home_dir.txtar  undeploy_config_dir.txtar  undeploy_home_dir.txtar
tests/integration/: main.rs  mod.rs  model.rs  store.rs  utils.rs
tests/integration/fixtures/cluster_dependency_iter/: full_dependency_path.txtar
tests/integration/fixtures/cluster_new_acyclic_check/: full_dependencies.txtar
tests/integration/fixtures/cluster_new_dependency_existence_check/: defined_dependencies.txtar
tests/integration/fixtures/cluster_new_invalid_setup/: bad_format_node.txtar  bad_format_root.txtar
tests/integration/fixtures/cluster_new_valid_setup/: root_and_nodes.txtar
tests/integration/fixtures/node_deploy/: already_deployed.txtar  not_deployed.txtar
tests/integration/fixtures/node_new_open/: existence.txtar
tests/integration/fixtures/root_deploy/: already_deployed.txtar  not_deployed.txtar
tests/integration/fixtures/root_new_clone/: deploy_config_dir.txtar  deploy_home_dir.txtar
