# SPDX-FileCopyrightText: 2025 Jason Pena <jasonpena@awkless.com>
# SPDX-License-Identifier: MIT

[package]
name = "ocd"
description = "Organize current dotfiles"
keywords = ["dotfile-manager", "cli-tool"]
categories = ["command-line-utilities"]
repository = "https://github.com/awkless/ocd.git"
readme = "README.md"
authors = ["Jason Pena <jasonpena@awkless.com>"]
edition = "2021"
license = "MIT"
version = "0.1.0"
rust-version = "1.77.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
thiserror = "2.0.12"
toml_edit = "0.22.24"
