# SPDX-FileCopyrightText: 2025 Jason Pena <jasonpena@awkless.com>
# SPDX-License-Identifier: MIT

[package]
name = "ocd"
description = "Organize current dotfiles"
keywords = ["dotfile-manager", "cli-tool"]
categories = ["command-line-utilities"]
repository = "https://github.com/awkless/ocd.git"
readme = "README.md"
authors = ["Jason Pena <jasonpena@awkless.com>"]
edition = "2021"
license = "MIT"
version = "0.6.1"
rust-version = "1.77.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
anyhow = "1.0.98"
auth-git2 = "0.5.7"
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
exitcode = "1.1.2"
futures = "0.3.31"
git2 = "0.20.1"
glob = "0.3.2"
indicatif = "0.17.11"
inquire = "0.7.5"
shellexpand = "3.1.1"
tabled = "0.19.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
toml_edit = "0.22.24"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[dev-dependencies]
indoc = "2.0.6"
pretty_assertions = "1.4.1"
sealed_test = "1.1.0"
simple_test_case = "1.2.0"
