# SPDX-FileCopyrightText: 2025 Jason Pena <jasonpena@awkless.com>
# SPDX-License-Identifier: MIT

[package]
name = "ocd"
description = "Organize current dotfiles"
keywords = ["dotfile-manager", "cli-tool"]
categories = ["command-line-utilities"]
repository = "https://github.com/awkless/ocd.git"
readme = "README.md"
authors = ["Jason Pena <jasonpena@awkless.com>"]
edition = "2021"
license = "MIT"
version = "0.8.0"
rust-version = "1.82.0"

[lib]
doctest = false

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
anyhow = "1.0.98"
auth-git2 = "0.5.7"
beau_collector = "0.2.1"
clap = { version = "4.5.38", features = ["derive"] }
config = { version = "0.15.11", features = ["toml"] }
dirs = "6.0.0"
futures = "0.3.31"
git2 = "0.20.2"
glob = "0.3.2"
indicatif = "0.17.11"
inquire = "0.7.5"
minus = { version = "5.6.1", features = [ "static_output", "search" ] }
openssl = { version = "0.10.73", features = [ "vendored" ]}
run_script = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
shellexpand = "3.1.1"
tabled = "0.19.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.17"
pretty_assertions = "1.4.1"
sealed_test = "1.1.0"
simple_test_case = "1.3.0"
simple_txtar = "1.1.0"
